setting up dev env

--- a/src/global.scss
+++ b/src/global.scss
@@ -16,21 +16,21 @@
 body {
   background-color: #fafafa;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-  padding: 20px 20px 40px 20px;
+  padding: 20px 20px 40px;
 }
 
 main {
-  max-width: 760px;
-  margin: 0 auto;
   background-color: white;
   border-radius: 5px;
-  box-shadow: 0px 0px 130px -50px var(--qwik-light-purple);
+  box-shadow: 0 0 130px -50px var(--qwik-light-purple);
+  margin: 0 auto;
+  max-width: 760px;
   overflow: hidden;
 }
 
 h1,
 h2 {
-  margin: 0 0 5px 0;
+  margin: 0 0 5px;
 }
 
 .lightning {
@@ -38,13 +38,13 @@ h2 {
 }
 
 section {
-  padding: 20px;
   border-bottom: 10px solid var(--qwik-dark-blue);
+  padding: 20px;
 }
 
 ul {
   list-style-type: square;
-  margin: 5px 0 30px 0;
+  margin: 5px 0 30px;
   padding-left: 25px;
 }
 
@@ -66,7 +66,7 @@ a:hover {
 }
 
 table.commands {
-  margin: 0 0 30px 0;
+  margin: 0 0 30px;
 }
 
 .commands td {
@@ -74,25 +74,26 @@ table.commands {
 }
 
 .commands td:first-child {
-  white-space: nowrap;
   padding-right: 20px;
+  white-space: nowrap;
 }
 
 code {
-  font-family: Menlo, Monaco, Courier New, monospace;
-  font-size: 0.9em;
   background-color: rgb(224, 224, 224);
-  padding: 2px 4px;
-  border-radius: 3px;
   border-bottom: 2px solid #bfbfbf;
+  border-radius: 3px;
+  font-family: Menlo, Monaco, 'Courier New', monospace;
+  font-size: 0.9em;
+  padding: 2px 4px;
 }
 
 footer {
+  font-size: 0.8em;
   padding: 15px;
   text-align: center;
-  font-size: 0.8em;
 }
 
+/* stylelint-disable-next-line no-descending-specificity */
 footer a {
   text-decoration: none;
 }
@@ -102,24 +103,25 @@ footer a:hover {
 }
 
 a.mindblow {
-  margin: 0 auto;
-  display: block;
   background: var(--qwik-light-purple);
-  padding: 10px 20px;
-  border-radius: 10px;
   border: 0;
-  color: white;
-  text-decoration: none;
-  font-size: 20px;
-  width: fit-content;
   border-bottom: 4px solid black;
+  border-radius: 10px;
+  color: white;
   cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🤯</text></svg>")
       16 0,
-    auto; /*!emojicursor.app*/
+    auto; /* !emojicursor.app */
+
+  display: block;
+  font-size: 20px;
+  margin: 0 auto;
+  padding: 10px 20px;
+  text-decoration: none;
+  width: fit-content;
 }
 
 a.mindblow:hover {
-  border-bottom-width: 0px;
+  border-bottom-width: 0;
   margin-bottom: 4px;
   transform: translateY(4px);
 }
