--- a/src/routes/flower/flower.scss
+++ b/src/routes/flower/flower.scss
@@ -1,20 +1,17 @@
 .host {
-  display: grid;
-
   align-items: center;
+  contain: strict;
+  display: grid;
+  height: 500px;
   justify-content: center;
   justify-items: center;
-  --rotation: 135deg;
+  width: 100%;
+
   --rotation: 225deg;
   --size-step: 10px;
   --odd-color-step: 5;
   --even-color-step: 5;
   --center: 12;
-
-  width: 100%;
-  height: 500px;
-
-  contain: strict;
 }
 
 input {
@@ -24,48 +21,49 @@ input {
 .square {
   --size: calc(40px + var(--index) * var(--size-step));
 
+  background: white;
+  border-color: black;
+  border-style: solid;
+  border-width: 2px;
+  box-sizing: border-box;
+  contain: strict;
   display: block;
-  width: var(--size);
+  grid-area: 1 / 1;
   height: var(--size);
   transform: rotateZ(calc(var(--rotation) * var(--state) * (var(--center) - var(--index))));
-  transition-property: transform, border-color;
   transition-duration: 5s;
+  transition-property: transform, border-color;
   transition-timing-function: ease-in-out;
-  grid-area: 1 / 1;
-  background: white;
-  border-width: 2px;
-  border-style: solid;
-  border-color: black;
-  box-sizing: border-box;
+  width: var(--size);
   will-change: transform, border-color;
-
-  contain: strict;
 }
 
 .square.odd {
   --luminance: calc(1 - calc(calc(var(--index) * var(--odd-color-step)) / 256));
-  background: rgb(
-    calc(172 * var(--luminance)),
-    calc(127 * var(--luminance)),
-    calc(244 * var(--luminance))
-  );
+
+  background: rgb(calc(172 * var(--luminance)), calc(127 * var(--luminance)), calc(244 * var(--luminance)));
 }
 
 .pride .square:nth-child(12n + 1) {
   background: #e70000;
 }
+
 .pride .square:nth-child(12n + 3) {
   background: #ff8c00;
 }
+
 .pride .square:nth-child(12n + 5) {
   background: #ffef00;
 }
+
 .pride .square:nth-child(12n + 7) {
   background: #00811f;
 }
+
 .pride .square:nth-child(12n + 9) {
-  background: #0044ff;
+  background: #04f;
 }
+
 .pride .square:nth-child(12n + 11) {
   background: #760089;
 }
